Fix projects resource selection alignment
Minor change so both columns are aligned with each other. Probably
changed when buttons styles were updated recently.

--- a/app/assets/stylesheets/responsive/alaveteli_pro/_projects_layout.scss
+++ b/app/assets/stylesheets/responsive/alaveteli_pro/_projects_layout.scss
@@ -206,7 +206,7 @@
         flex-direction: column-reverse;
         justify-content: start;
 
-        padding-top: 0.35em;
+        padding-top: 0.21em;
       }
     }
   }
